test_programs/compile_failure/invalid_mod_mod_path/src/main.nr
mod crate::mod;

fn main() {
}
